--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -67,7 +67,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eq9_lA0TUIoP",
-        "outputId": "bb7e4058-1c3b-46a2-e7db-0051c21e75cd"
+        "outputId": "fd019d94-5859-4a71-b8b9-1ff226eeef4c"
       },
       "source": [
         "from google.colab import drive\n",
@@ -132,10 +132,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wfe0NAxZbNUJ",
-        "outputId": "ca1094be-4987-4a95-ce8b-78d6a4319bc1"
+        "outputId": "02d87e4c-56ce-44b7-8cda-63862e345f36"
       },
       "source": [
-        "lines[0:20]"
+        "lines[0:10]"
       ],
       "execution_count": 5,
       "outputs": [
@@ -152,17 +152,7 @@
               " \"L872 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Okay -- you're gonna need to learn how to lie.\",\n",
               " 'L871 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ No',\n",
               " 'L870 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ I\\'m kidding.  You know how sometimes you just become this \"persona\"?  And you don\\'t know how to quit?',\n",
-              " 'L869 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Like my fear of wearing pastels?',\n",
-              " 'L868 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ The \"real you\".',\n",
-              " 'L867 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ What good stuff?',\n",
-              " \"L866 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ I figured you'd get to the good stuff eventually.\",\n",
-              " 'L865 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ Thank God!  If I had to hear one more story about your coiffure...',\n",
-              " \"L864 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Me.  This endless ...blonde babble. I'm like, boring myself.\",\n",
-              " 'L863 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ What crap?',\n",
-              " 'L862 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ do you listen to this crap?',\n",
-              " 'L861 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ No...',\n",
-              " 'L860 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Then Guillermo says, \"If you go any lighter, you\\'re gonna look like an extra on 90210.\"',\n",
-              " 'L699 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ You always been this selfish?']"
+              " 'L869 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Like my fear of wearing pastels?']"
             ]
           },
           "metadata": {
@@ -179,10 +169,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vBnDBPs7bPoS",
-        "outputId": "8b6b5f4d-ad7e-451a-e29c-55a0b80030dd"
+        "outputId": "807c4c24-59dc-4ecd-dce7-fc2706b5633d"
       },
       "source": [
-        "conversations[0:20]"
+        "conversations[0:10]"
       ],
       "execution_count": 6,
       "outputs": [
@@ -199,17 +189,7 @@
               " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L276', 'L277']\",\n",
               " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L280', 'L281']\",\n",
               " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L363', 'L364']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L365', 'L366']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L367', 'L368']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L401', 'L402', 'L403']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L404', 'L405', 'L406', 'L407']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L575', 'L576']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L577', 'L578']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L662', 'L663']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L693', 'L694', 'L695']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L696', 'L697', 'L698', 'L699']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L860', 'L861']\",\n",
-              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L862', 'L863', 'L864', 'L865']\"]"
+              " \"u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L365', 'L366']\"]"
             ]
           },
           "metadata": {
@@ -276,10 +256,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P_IWnldiZiyv",
-        "outputId": "3f86a41f-fd67-4a60-e735-dd242310f529"
+        "outputId": "3574ed06-15b2-4db5-fef5-490b1828b2f2"
       },
       "source": [
-        "conversations_ids[0:20]"
+        "conversations_ids[0:10]"
       ],
       "execution_count": 9,
       "outputs": [
@@ -296,17 +276,7 @@
               " ['L276', 'L277'],\n",
               " ['L280', 'L281'],\n",
               " ['L363', 'L364'],\n",
-              " ['L365', 'L366'],\n",
-              " ['L367', 'L368'],\n",
-              " ['L401', 'L402', 'L403'],\n",
-              " ['L404', 'L405', 'L406', 'L407'],\n",
-              " ['L575', 'L576'],\n",
-              " ['L577', 'L578'],\n",
-              " ['L662', 'L663'],\n",
-              " ['L693', 'L694', 'L695'],\n",
-              " ['L696', 'L697', 'L698', 'L699'],\n",
-              " ['L860', 'L861'],\n",
-              " ['L862', 'L863', 'L864', 'L865']]"
+              " ['L365', 'L366']]"
             ]
           },
           "metadata": {
@@ -349,7 +319,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zW8yUeIZaw78",
-        "outputId": "dba66731-c0c3-4824-81f9-4021ef924284"
+        "outputId": "c373736d-fb42-40e5-d43c-a9c183150b03"
       },
       "source": [
         "questions[0:20]"
@@ -396,7 +366,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2PIAMsqda4ip",
-        "outputId": "e74d02e2-1514-4237-9dad-99716181bcd5"
+        "outputId": "81b8f189-b57b-4e62-f873-17f87d4ab9fe"
       },
       "source": [
         "answers[0:20]"
@@ -501,10 +471,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FBSzp9KQehFX",
-        "outputId": "8c3818dd-1696-43f1-90f5-e92670177db9"
+        "outputId": "b370e95b-ca66-4d26-9572-b0e69c9ab6f4"
       },
       "source": [
-        "clean_questions[0:20]"
+        "clean_questions[0:10]"
       ],
       "execution_count": 15,
       "outputs": [
@@ -521,17 +491,7 @@
               " 'the thing is cameron  i am at the mercy of a particularly hideous breed of loser  my sister  i cannot date until she does',\n",
               " 'why',\n",
               " 'unsolved mystery  she used to be really popular when she started high school then it was just like she got sick of it or something',\n",
-              " 'gosh if only we could find kat a boyfriend',\n",
-              " \"c'esc ma tete this is my head\",\n",
-              " 'right  see  you are ready for the quiz',\n",
-              " \"i don't want to know how to say that though  i want to know useful things like where the good stores are  how much does champagne cost  stuff like chat  i have never in my life had to point out my head to someone\",\n",
-              " \"that is because it's such a nice one\",\n",
-              " 'how is our little find the wench a date plan progressing',\n",
-              " 'there',\n",
-              " 'you got something on your mind',\n",
-              " 'you have my word  as a gentleman',\n",
-              " 'how do you get your hair to look like that',\n",
-              " 'sure have']"
+              " 'gosh if only we could find kat a boyfriend']"
             ]
           },
           "metadata": {
@@ -571,10 +531,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ftTpHEKmej0n",
-        "outputId": "4e394226-6581-42db-9301-6c6142d28a58"
+        "outputId": "1e4d131f-4d1c-43e3-cd36-ac168d605cf6"
       },
       "source": [
-        "clean_answers[0:20]"
+        "clean_answers[0:10]"
       ],
       "execution_count": 17,
       "outputs": [
@@ -591,17 +551,7 @@
               " 'seems like she could get a date easy enough',\n",
               " 'unsolved mystery  she used to be really popular when she started high school then it was just like she got sick of it or something',\n",
               " 'that is a shame',\n",
-              " 'let me see what i can do',\n",
-              " 'right  see  you are ready for the quiz',\n",
-              " \"i don't want to know how to say that though  i want to know useful things like where the good stores are  how much does champagne cost  stuff like chat  i have never in my life had to point out my head to someone\",\n",
-              " \"that is because it's such a nice one\",\n",
-              " 'forget french',\n",
-              " \"well there's someone i think might be \",\n",
-              " 'where',\n",
-              " \"i counted on you to help my cause you and that thug are obviously failing aren't we ever going on our date\",\n",
-              " 'you are sweet',\n",
-              " \"eber's deep conditioner every two days and i never ever use a blowdryer without the diffuser attachment\",\n",
-              " 'i really really really wanna go but i cannot  not unless my sister goes']"
+              " 'let me see what i can do']"
             ]
           },
           "metadata": {
@@ -759,10 +709,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "81b3Piulz23B",
-        "outputId": "ec941ba5-0964-46a0-9549-acf56f46d610"
+        "outputId": "42325fa7-d777-4218-cd81-9381f5110301"
       },
       "source": [
-        "clean_answers[0:20]"
+        "clean_answers[0:10]"
       ],
       "execution_count": 23,
       "outputs": [
@@ -779,17 +729,7 @@
               " 'seems like she could get a date easy enough <EOS>',\n",
               " 'unsolved mystery  she used to be really popular when she started high school then it was just like she got sick of it or something <EOS>',\n",
               " 'that is a shame <EOS>',\n",
-              " 'let me see what i can do <EOS>',\n",
-              " 'right  see  you are ready for the quiz <EOS>',\n",
-              " \"i don't want to know how to say that though  i want to know useful things like where the good stores are  how much does champagne cost  stuff like chat  i have never in my life had to point out my head to someone <EOS>\",\n",
-              " \"that is because it's such a nice one <EOS>\",\n",
-              " 'forget french <EOS>',\n",
-              " \"well there's someone i think might be  <EOS>\",\n",
-              " 'where <EOS>',\n",
-              " \"i counted on you to help my cause you and that thug are obviously failing aren't we ever going on our date <EOS>\",\n",
-              " 'you are sweet <EOS>',\n",
-              " \"eber's deep conditioner every two days and i never ever use a blowdryer without the diffuser attachment <EOS>\",\n",
-              " 'i really really really wanna go but i cannot  not unless my sister goes <EOS>']"
+              " 'let me see what i can do <EOS>']"
             ]
           },
           "metadata": {
@@ -883,10 +823,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rwVCY8Om4dQf",
-        "outputId": "fcb3d399-f8c2-4e82-c55d-ce2ca86678f4"
+        "outputId": "e94beacf-c47c-40e5-84e4-3a25c83857c5"
       },
       "source": [
-        "sorted_clean_questions[0:20]"
+        "sorted_clean_questions[0:10]"
       ],
       "execution_count": 27,
       "outputs": [
@@ -894,26 +834,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[47],\n",
-              " [62],\n",
-              " [123],\n",
-              " [147],\n",
-              " [135],\n",
-              " [39],\n",
-              " [175],\n",
-              " [39],\n",
-              " [182],\n",
-              " [183],\n",
-              " [221],\n",
-              " [36],\n",
-              " [62],\n",
-              " [135],\n",
-              " [62],\n",
-              " [110],\n",
-              " [375],\n",
-              " [132],\n",
-              " [297],\n",
-              " [211]]"
+              "[[47], [62], [123], [147], [135], [39], [175], [39], [182], [183]]"
             ]
           },
           "metadata": {
@@ -930,10 +851,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_TjBBe2V4fmr",
-        "outputId": "455c58d3-bd78-4496-ef2b-6dea7f04f882"
+        "outputId": "fe73ac7a-a978-4d8d-980d-6fe833bc5467"
       },
       "source": [
-        "sorted_clean_answers[0:20]"
+        "sorted_clean_answers[0:10]"
       ],
       "execution_count": 28,
       "outputs": [
@@ -999,62 +920,7 @@
               " [1387, 134, 8823],\n",
               " [27, 239, 133, 194, 226, 74, 8823],\n",
               " [196, 8823],\n",
-              " [20, 27, 124, 612, 32, 45, 1512, 47, 8823],\n",
-              " [41,\n",
-              "  2582,\n",
-              "  157,\n",
-              "  18,\n",
-              "  44,\n",
-              "  78,\n",
-              "  45,\n",
-              "  103,\n",
-              "  1112,\n",
-              "  50,\n",
-              "  963,\n",
-              "  15,\n",
-              "  8824,\n",
-              "  144,\n",
-              "  219,\n",
-              "  519,\n",
-              "  8823],\n",
-              " [111, 8824, 93, 45, 271, 8823],\n",
-              " [180, 75, 77, 45, 272, 273, 8823],\n",
-              " [279,\n",
-              "  24,\n",
-              "  18,\n",
-              "  280,\n",
-              "  18,\n",
-              "  20,\n",
-              "  110,\n",
-              "  128,\n",
-              "  281,\n",
-              "  76,\n",
-              "  116,\n",
-              "  278,\n",
-              "  267,\n",
-              "  75,\n",
-              "  264,\n",
-              "  74,\n",
-              "  5,\n",
-              "  18,\n",
-              "  282,\n",
-              "  283,\n",
-              "  284,\n",
-              "  93,\n",
-              "  8824,\n",
-              "  152,\n",
-              "  5,\n",
-              "  41,\n",
-              "  8824,\n",
-              "  8824,\n",
-              "  285,\n",
-              "  8823],\n",
-              " [116, 60, 244, 4625, 383, 297, 8823],\n",
-              " [8824, 358, 119, 359, 360, 361, 15, 362, 119, 363, 364, 5, 8824, 8823],\n",
-              " [129, 376, 8823],\n",
-              " [73, 134, 129, 141, 8823],\n",
-              " [37, 56, 181, 8823],\n",
-              " [36, 128, 27, 194, 8823]]"
+              " [20, 27, 124, 612, 32, 45, 1512, 47, 8823]]"
             ]
           },
           "metadata": {
